adds cache crud operation

--- a/src/main/resources/app-error.properties
+++ b/src/main/resources/app-error.properties
@@ -2,6 +2,7 @@ error.not-exit=User not found
 error.create=Create user failed
 error.update=Update user failed
 error.by-id=Get user by id failed
+error.by-name-occu=Get user by name and occupation failed
 error.all=Get all users failed
 error.delete=Delete user failed
 error.validation=Validation failed
