--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.10.6</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
