--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -126,5 +130,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
