--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,20 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Redis configurations
+spring.redis.host=192.168.99.100
+spring.redis.port=6379
+spring.redis.timeout=10000
+
+spring.cache.type=REDIS
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=pre
+spring.cache.redis.time-to-live=60000
+
+#run redis docker image
+#docker run -d --name redis -p 6379:6379 redis
+#docker exec -it redis sh
+#redis-cli
+#KEYS *
